web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/9/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (1,14)
1|let { x, ...y, ...z } = obj;
 |            ^
